--- a/summary.tex
+++ b/summary.tex
@@ -1,7 +1,10 @@
-\begin{frame}
-  \frametitle{Summary}
-
+% ----------------------------------------------------------------------
+\begin{frame}{Things to remember}
+  \begin{itemize}
+  \item T
+  \end{itemize}
 \end{frame}
+% ----------------------------------------------------------------------
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../../main"
