add things to remember

--- a/summary.tex
+++ b/summary.tex
@@ -1,10 +1,22 @@
 % ----------------------------------------------------------------------
 \begin{frame}{Things to remember}
+  \bigskip
   \begin{itemize}
-  \item T
+  \item Forward and backward inference
+    \smallskip
+  \item Tableau calculi corresponding to
+    \begin{itemize}\normalsize
+    \item Fitting's operator
+    \item Well-founder operator
+    \item Completion
+    \item ASP solvers
+    \end{itemize}
+    \smallskip
+  \item Impact of choices on search space
   \end{itemize}
 \end{frame}
 % ----------------------------------------------------------------------
+%
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../../main"
