--- a/figures/fig_tableau.tex
+++ b/figures/fig_tableau.tex
@@ -1,7 +1,9 @@
-\arrayrulewidth=.1pt
-{\scriptsize % \ptsize{8} % \footnotesize
-\[\hspace{-0.75cm}
-\begin{array}{@{}rclp{5pt}rcl}
+% ----------------------------------------------------------------------
+{\arrayrulewidth=.1pt
+\scriptsize
+\[
+\quad
+\begin{array}{rclp{5pt}rcl}
   \text{(FTB)}
   &
   \begin{array}{c}
@@ -163,7 +165,9 @@
 \]}
 % \scriptsize
 % See paper for formal details on provisos $(\S)$, $(\dagger)$, $(\ddagger)$, and $(\sharp[X])$.
+% ----------------------------------------------------------------------
+%
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../asp"
+%%% TeX-master: "../../../main"
 %%% End:
