--- a/tableaux-and-asp-solvers.tex
+++ b/tableaux-and-asp-solvers.tex
@@ -1,5 +1,4 @@
-
-%----------------------------------------------------------------
+% ----------------------------------------------------------------------
 \begin{frame}{Tableau calculi characterizing ASP solvers}
   \begin{itemize}
   \item <1-> ASP solvers combine propagation with case analysis
@@ -29,4 +28,9 @@
         essentially differ only in their $\textit{Cut}$ rules
   \end{itemize}
 \end{frame}
-%------------------------------------------------------------
+% ----------------------------------------------------------------------
+%
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../main"
+%%% End:
