suppress explicit repetion of example

--- a/tableaux-and-asp.tex
+++ b/tableaux-and-asp.tex
@@ -55,28 +55,9 @@
     if every branch in the tableau is conflicting
   \end{itemize}
 \end{frame}
-% ------------------------------------------------------------
-\begin{frame}{Example}
-  \begin{itemize}
-  \item Consider the program
-    \[
-    P
-    =
-    \left\{
-      \begin{array}{l}
-        a\leftarrow\\
-        c\leftarrow \neg b, \neg d\\
-        d\leftarrow a, \neg c
-      \end{array}
-    \right\}
-    \]
-  \item [] having stable models $\{a,c\}$ and $\{a,d\}$
-  \end{itemize}
-\end{frame}
-%------------------------------------------------------------
-\begin{frame}{(Previewed) Example}
+% ----------------------------------------------------------------------
+\begin{frame}[shrink]{Previewed example}
 \[
-{\small
 \begin{array}{@{}rc}
 &a\leftarrow              \\
 &c\leftarrow \neg b,\neg d  \\
