--- a/tableaux-and-asp.tex
+++ b/tableaux-and-asp.tex
@@ -35,6 +35,7 @@
 \end{frame}
 % ----------------------------------------------------------------------
 \begin{frame}[shrink]{Tableau rules for ASP at a glance}
+  \label{lab:tableau:rules:asp}
   \input{figures/fig_tableau}
 \end{frame}
 % ----------------------------------------------------------------------
